[package]
name = "rmqtt-bench"
version = "0.1.1"
authors = ["rmqtt <rmqttd@126.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rmqtt/rmqtt-bench"
homepage = "https://github.com/rmqtt/rmqtt-bench"
description = "rmqtt-bench - MQTT benchmark tool"

[[bin]]
name = "rmqtt-bench"
path = "src/main.rs"

[dependencies]
rust-box = { version = "0.5", features = ["event", "std-ext"] }
futures = "0.3"
ntex-mqtt = "0.8"
ntex = { version = "0.5", features = ["tokio", "rustls"] }
structopt = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"], default-features = false }
log = "0.4"
env_logger = "0.8.4"
rand = "0.8"
uuid = { version = "0.8.1", features = ["v4"] }
update_rate = { version = "2.0" }
dashmap = "5.4"
ahash = "0.7"
once_cell = "1.10"
parking_lot = "0.12"